core: Add "title-from-filename" property

When the title is guessed from the filename, so that we know to
overwrite it when resolving a new title.

https://bugzilla.gnome.org/show_bug.cgi?id=706877